<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <EditText android:id="@+id/searchField"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:hint="@string/log_entry_search_hint"
              android:inputType="textVisiblePassword"
              android:padding="10dp"/>

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_all"
            android:id="@+id/radioButtonAll"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_error"
            android:id="@+id/radioButtonError"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_warning"
            android:id="@+id/radioButtonWarning"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

    <ListView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/logEntriesListView" android:layout_gravity="center"/>

</LinearLayout>